--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,8 @@ body {
 	left: 115px;
 }
 .header__img {
-	opacity: 1;
+	opacity: 0;
 	padding-left: 150px;
 	padding-top: 10px;
+	transition: all 1.5s;
 }
