--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,14 @@ body {
 	padding-top: 80px;
 	max-width: 400px;
 	text-align: center;
+	position: relative;
+}
+.header__title::before {
+	content: "👑";
+	position: absolute;
+	top: 50px;
+	left: -2px;
+	font-size: 28px;
 }
 .quote {
 	border: 0.05em solid black;
@@ -111,7 +119,84 @@ body {
 	border-radius: 50%;
 	position: fixed;
 	right: 25px;
-	bottom: 40px;
+	bottom: 50px;
 	cursor: pointer;
 	border: 1px solid red;
+}
+.fixed__text {
+	position: fixed;
+	right: 10px;
+	bottom: 5px;
+}
+.hide__text {
+	position: fixed;
+	right: 530px;
+	bottom: 16px;
+	font-size: 40px;
+}
+.show__text {
+	position: fixed;
+	right: 10px;
+	bottom: 10px;
+	font-size: 40px;
+	display: none;
+}
+.slide {
+	width: 900px;
+	display: none;
+	background: #fff5f5;
+	padding: 20px;
+	border-radius: 10px;
+	border: 0.5px dashed black;
+	max-height: 300px;
+}
+
+.dot {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+	background-color: #717171;
+}
+
+.answer {
+	padding-top: 10px;
+}
+.answer::before,
+.question::before {
+	content: "\2014";
+}
+.slider {
+	margin-bottom: 150px;
+}
+.slider-container {
+	position: relative;
+}
+.prev,
+.next {
+	cursor: pointer;
+	position: absolute;
+	top: 45%;
+	width: auto;
+	padding: 16px;
+	margin-top: -22px;
+	font-weight: bold;
+	font-size: 40px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+}
+.next {
+	right: 195px;
+}
+.prev {
+	left: -40px;
 }
