--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,7 @@ body {
 	position: relative;
 	margin-top: 100px;
 	max-width: 386px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .quote img {
 	width: 75px;
