--- a/css/index.css
+++ b/css/index.css
@@ -30,11 +30,31 @@ body {
 	margin-bottom: 100px;
 }
 .container {
-	max-width: 1136px;
+	max-width: 1200px;
 	padding: 0;
 	margin: 0 auto;
 }
+
+@media (max-width: 1136px) {
+	.container {
+		max-width: 970px;
+	}
+}
+
+@media (max-width: 992px) {
+	.container {
+		max-width: 750px;
+	}
+}
+
+@media (max-width: 767px) {
+	.container {
+		max-width: none;
+	}
+}
+
 .flex-div {
+	width: 100%;
 	display: flex;
 }
 .header__title {
@@ -107,10 +127,12 @@ body {
 	top: 560px;
 	left: 115px;
 }
+.header__right {
+	align-self: center;
+}
 .header__img {
 	opacity: 0;
-	padding-left: 150px;
-	padding-top: 10px;
+	width: 100%;
 	transition: all 1.5s;
 }
 
@@ -169,7 +191,9 @@ body {
 .dot:hover {
 	background-color: #717171;
 }
-
+.slider__title {
+	margin-bottom: 130px;
+}
 .answer {
 	padding-top: 10px;
 }
@@ -204,4 +228,121 @@ body {
 }
 .prev {
 	left: -40px;
+}
+
+.timeline {
+	background: #fff5f5;
+	min-height: 700px;
+	padding-top: 100px;
+}
+.timeline__block {
+	width: 80%;
+	position: relative;
+	margin: 0 auto;
+}
+
+.field {
+	padding: 20px 70px 20px 70px;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	border-radius: 15px;
+	margin-bottom: 50px;
+	border: 0.5px solid black;
+}
+.field input {
+	-webkit-appearance: none;
+	height: 3px;
+	width: 100%;
+	background: #000;
+	border-radius: 10px;
+	outline: none;
+	border: none;
+}
+.field .value {
+	position: absolute;
+	font-size: 22px;
+	font-weight: 600;
+	color: #664aff;
+	font-family: 'Lato', sans-serif;
+}
+.field .value.right {
+	right: 7px;
+}
+.field .value.left {
+	left: 7px;
+}
+.rangeValue {
+	position: relative;
+	width: 100%;
+}
+.rangeValue span {
+	position: absolute;
+	height: 45px;
+	width: 45px;
+	color: #fff;
+	font-weight: 500;
+	top: -62px;
+	transform: translateX(-50%);
+	line-height: 55px;
+	z-index: 2;
+	left: 8.3%;
+}
+
+.rangeValue span::after {
+	content: "";
+	position: absolute;
+	height: 45px;
+	width: 45px;
+	background: #664aff;
+	left: 50%;
+	transform: translateX(-50%) rotate(45deg);
+	border: 3px solid #fff;
+	padding: 30px;
+	z-index: -1;
+	border-top-left-radius: 50%;
+	border-top-right-radius: 50%;
+	border-bottom-left-radius: 50%;
+}
+
+.field input::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	height: 20px;
+	width: 20px;
+	background: #664aff;
+	border-radius: 50%;
+	border: 1px solid #664aff;
+	cursor: pointer;
+}
+
+.info_timeline {
+	position: absolute;
+	top: -35px;
+	font-size: 24px;
+	font-weight: 500;
+}
+.birth {
+	left: 0px;
+}
+.now {
+	right: -26px;
+}
+.date {
+	display: none;
+}
+.d1958 {
+	display: block;
+}
+
+.timeline__info {
+	background: #fff;
+	width: 100%;
+	height: 500px;
+}
+.timeline__title {
+	display: inline-block;
+	width: 80%;
+	margin: 0 190px 100px;
 }
